pure: Revert 862fc21 and fix 172769d for image overlaps

--- a/templates/pure/style.css
+++ b/templates/pure/style.css
@@ -807,7 +807,6 @@ nav.pager ul {
 /** Entries **/
 #content p {
     word-break: break-word;
-    overflow: auto; /*avoids nesting and overlaps*/
 }
 .post_content {
     display: inline-block;
@@ -822,7 +821,7 @@ nav.pager ul {
         min-width: 33.3em;
         max-width: 100%; }
     .post_content {
-        display: contents; }
+        display: flow-root; }
 }
 .serendipity_title {
     font-family: Verdana, Arial, Geneva, Helvetica, sans-serif;
